# tensorcompute_mobile

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: label_image.h
platform/: makefile
platform/java/: Makefile  settings.gradle
platform/java/jni/: label_image.i
platform/java/liblabel_image/: CMakeLists.txt  gradle.properties
platform/java/liblabel_image/src/main/: AndroidManifest.xml
platform/java/liblabel_image/src/main/cpp/: label_image_wrap.cpp
platform/java/liblabel_image/src/main/java/com/chiragahuja/imageclassification/app/jni/: ImageClassifier.java  impl.java  implJNI.java
platform/java/liblabel_image/src/res/values/: strings.xml
src/: Main.java  main.cpp
